@@ -1,24 +1,19 @@
 package com.example.appcenter_project.service.user;
 
+import com.example.appcenter_project.dto.response.user.ResponseUserNotificationDto;
 import com.example.appcenter_project.entity.notification.UserNotification;
 import com.example.appcenter_project.entity.user.User;
-import com.example.appcenter_project.entity.user.UserGroupOrderCategory;
-import com.example.appcenter_project.entity.user.UserGroupOrderKeyword;
 import com.example.appcenter_project.enums.groupOrder.GroupOrderType;
 import com.example.appcenter_project.enums.user.NotificationType;
 import com.example.appcenter_project.exception.CustomException;
 import com.example.appcenter_project.repository.notification.UserNotificationRepository;
-import com.example.appcenter_project.repository.user.UserGroupOrderCategoryRepository;
-import com.example.appcenter_project.repository.user.UserGroupOrderKeywordRepository;
 import com.example.appcenter_project.repository.user.UserRepository;
-import com.example.appcenter_project.security.CustomUserDetails;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.example.appcenter_project.exception.ErrorCode.*;
@@ -28,85 +23,78 @@ import static com.example.appcenter_project.exception.ErrorCode.*;
 @Transactional
 public class UserNotificationService {
 
-    private final UserGroupOrderKeywordRepository userGroupOrderKeywordRepository;
-    private final UserGroupOrderCategoryRepository userGroupOrderCategoryRepository;
     private final UserRepository userRepository;
     private final UserNotificationRepository userNotificationRepository;
 
     public void addGroupOrderKeyword(Long userId, String keyword) {
-        if (userGroupOrderKeywordRepository.existsByKeyword(keyword)) {
-            throw new CustomException(USER_KEYWORD_ALREADY_EXISTS);
-        }
-
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
 
-        UserGroupOrderKeyword build = UserGroupOrderKeyword.builder()
-                .user(user)
-                .keyword(keyword)
-                .build();
-
-        userGroupOrderKeywordRepository.save(build);
-    }
-
-    public List<String> findUserGroupOrderKeyword(Long userId) {
-        return userGroupOrderKeywordRepository.findByUserId(userId).stream().map(u -> u.getKeyword()).toList();
-    }
-
-    public void updateGroupOrderKeyword(Long userId, String beforeKeyword, String afterKeyword) {
-        if (userGroupOrderKeywordRepository.existsByKeyword(afterKeyword)) {
-            throw new CustomException(USER_KEYWORD_ALREADY_EXISTS);
+        if (user.getGroupOrderKeywords().contains(keyword)) {
+            throw new CustomException(USER_GROUP_ORDER_KEYWORD_ALREADY_EXISTS);
         }
-        UserGroupOrderKeyword userGroupOrderKeyword = userGroupOrderKeywordRepository
-                .findByUserIdAndKeyword(userId, beforeKeyword).orElseThrow(() -> new CustomException(USER_GROUP_ORDER_KEYWORD_NOT_FOUND));
-        userGroupOrderKeyword.updateKeyword(afterKeyword);
-    }
 
-    public void deleteUserGroupOrderKeyword(Long userId, String keyword) {
-        userGroupOrderKeywordRepository.deleteByUserIdAndKeyword(userId, keyword);
+        user.getGroupOrderKeywords().add(keyword);
     }
 
     public void addGroupOrderCategory(Long userId, GroupOrderType groupOrderType) {
-        if (userGroupOrderCategoryRepository.existsByCategory(groupOrderType)) {
-            throw new CustomException(USER_KEYWORD_ALREADY_EXISTS);
-        }
-
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
 
-        UserGroupOrderCategory userGroupOrderCategory = UserGroupOrderCategory.builder()
-                .user(user)
-                .category(groupOrderType)
-                .build();
+        if (user.getGroupOrderTypes().contains(groupOrderType)) {
+            throw new CustomException(USER_GROUP_ORDER_CATEGORY_ALREADY_EXISTS);
+        }
 
-        userGroupOrderCategoryRepository.save(userGroupOrderCategory);
+        user.getGroupOrderTypes().add(groupOrderType);
     }
 
+    public List<String> findUserGroupOrderKeyword(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+        return user.getGroupOrderKeywords();
+    }
 
     public List<String> findUserGroupOrderCategory(Long userId) {
-        return userGroupOrderCategoryRepository.findByUserId(userId)
-                .stream()
-                .map(UserGroupOrderCategory::getCategory)
-                .map(GroupOrderType::toValue)
-                .collect(Collectors.toList());
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+        return user.getGroupOrderTypes().stream().map(GroupOrderType::toValue).toList();
+    }
+
+    public void updateGroupOrderKeyword(Long userId, String beforeKeyword, String afterKeyword) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+
+        if (user.getGroupOrderKeywords().contains(afterKeyword)) {
+            throw new CustomException(USER_GROUP_ORDER_KEYWORD_ALREADY_EXISTS);
+        }
+
+        int index = user.getGroupOrderKeywords().indexOf(beforeKeyword);
+        user.getGroupOrderKeywords().set(index, afterKeyword);
+
     }
 
     public void updateGroupOrderCategory(Long userId, GroupOrderType beforeCategory, GroupOrderType afterCategory) {
-        if (userGroupOrderCategoryRepository.existsByCategory(afterCategory)) {
-            throw new CustomException(USER_KEYWORD_ALREADY_EXISTS);
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+
+        if (user.getGroupOrderTypes().contains(afterCategory)) {
+            throw new CustomException(USER_GROUP_ORDER_CATEGORY_ALREADY_EXISTS);
         }
 
-        if (!userGroupOrderCategoryRepository.existsByCategory(beforeCategory)) {
-            throw new CustomException(USER_KEYWORD_NOT_FOUND);
-        }
+        int index = user.getGroupOrderTypes().indexOf(beforeCategory);
+        user.getGroupOrderTypes().set(index, afterCategory);
+    }
 
-        UserGroupOrderCategory userGroupOrderCategory = userGroupOrderCategoryRepository.findByUserIdAndCategory(userId, beforeCategory).orElseThrow(() -> new CustomException(USER_KEYWORD_NOT_FOUND));
-        userGroupOrderCategory.updateKeyword(afterCategory);
+    public void deleteUserGroupOrderKeyword(Long userId, String keyword) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+        user.getGroupOrderKeywords().remove(keyword);
     }
 
     public void deleteUserGroupOrderCategory(Long userId, GroupOrderType category) {
-        UserGroupOrderCategory userGroupOrderCategory = userGroupOrderCategoryRepository.findByUserIdAndCategory(userId, category).orElseThrow(() -> new CustomException(USER_KEYWORD_NOT_FOUND));
-        userGroupOrderCategoryRepository.delete(userGroupOrderCategory);
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+        user.getGroupOrderTypes().remove(category);
     }
 
     public void addReceiveNotificationType(Long userId, List<String> notificationTypes) {
@@ -134,5 +122,22 @@ public class UserNotificationService {
     public void deleteUserNotification(Long userId, Long notificationId) {
         UserNotification userNotification = userNotificationRepository.findByUserIdAndNotificationId(userId, notificationId).orElseThrow(() -> new CustomException(USER_NOTIFICATION_NOT_FOUND));
         userNotificationRepository.delete(userNotification);
+    }
+
+    public ResponseUserNotificationDto findReceiveNotificationType(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+
+        List<NotificationType> receiveTypes = user.getReceiveNotificationTypes();
+
+        ResponseUserNotificationDto responseDto = ResponseUserNotificationDto.builder()
+                .roommateNotification(receiveTypes.contains(NotificationType.ROOMMATE))
+                .groupOrderNotification(receiveTypes.contains(NotificationType.GROUP_ORDER))
+                .dormitoryNotification(receiveTypes.contains(NotificationType.DORMITORY))
+                .unidormNotification(receiveTypes.contains(NotificationType.UNI_DORM))
+                .supportersNotification(receiveTypes.contains(NotificationType.SUPPORTERS))
+                .build();
+
+        return responseDto;
     }
 }
